--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="nav-row">
                 <a href="./index.html" class="logo"><strong>Frontend </strong>Portfolio</a>
                 <ul class="nav-list">
-                    <li class="nav-list__item"> <a href="/index.html" class="nav-list__link nav-list__link--active" >Projects</a></li>
+                    <li class="nav-list__item"> <a href="/index.html" class="nav-list__link nav-list__link--active">Projects</a></li>
                     <li class="nav-list__item"> <a href="/skills.html" class="nav-list__link">Skills</a></li>
                     <li class="nav-list__item"> <a href="/contacts.html" class="nav-list__link">Contacts</a></li>
                 </ul>
@@ -21,5 +21,18 @@
             </div>
         </div>
     </nav>
+
+    <header class="header">
+        <div class="header__wrapper">
+            <h1 class="header__title">
+                <strong>Hi, my name is <em>Lisa</em></strong><br>
+                a frontend developer
+            </h1>
+            <div class="header__text">
+                <p>with passion for learning and creating.</p>
+            </div>
+            <a href="#!" class="btn">Download CV</a>
+        </div>
+    </header>
 </body>
 </html>
