--- a/index.html
+++ b/index.html
@@ -68,5 +68,29 @@
             </ul>
         </div>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <ul class="social">
+                    <li class="sosial__item">
+                        <a href="#!"><img src="./img/icons/gitHub.svg" alt="link"></a>
+                    </li>
+                    <li class="sosial__item">
+                        <a href="#!"><img src="./img/icons/linkedIn.svg" alt="link"></a>
+                    </li>
+                    <li class="sosial__item">
+                        <a href="#!"><img src="./img/icons/telegram.svg" alt="link"></a>
+                    </li>
+                    <li class="sosial__item">
+                        <a href="#!"><img src="./img/icons/mail.svg" alt="link"></a>
+                    </li>
+                </ul>
+                <div class="copywrite">
+                    <p>© 2023 Elisabeth</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
