mobile adaptation done

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
             <div class="nav-row">
                 <a href="./index.html" class="logo"><strong>Frontend </strong>Portfolio</a>
                 <ul class="nav-list">
-                    <li class="nav-list__item"> <a href="/index.html" class="nav-list__link nav-list__link--active">Projects</a></li>
-                    <li class="nav-list__item"> <a href="/skills.html" class="nav-list__link">Skills</a></li>
-                    <li class="nav-list__item"> <a href="/contacts.html" class="nav-list__link">Contacts</a></li>
-                </ul>
+                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link nav-list__link--active">Home</a></li>
+                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link">Projects</a></li>
+                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Contacts</a></li>                </ul>
             </div>
             </div>
         </div>
@@ -36,37 +35,15 @@
     </header>
 
     <main class="section">
-        <div class="container">
-            <h2 class="title-1">Projects</h2>
-            <ul class="projects">
-                <li class="project">
-                    <a href="./project-page.html">
-                        <img src="./img/projects/01.jpg" alt="Project img" class="project__img">
-                        <h3 class="project__title">Gaming streaming portal</h3>
-                    </a>
-                </li>
-                <li class="project">
-                    <img src="./img/projects/02.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Video service</h3>
-                </li>
-                <li class="project">
-                    <img src="./img/projects/03.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Video portal</h3>
-                </li>
-                <li class="project">
-                    <img src="./img/projects/04.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Datting app</h3>
-                </li>
-                <li class="project">
-                    <img src="./img/projects/05.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Landing</h3>
-                </li>
-                <li class="project">
-                    <img src="./img/projects/06.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Gaming community</h3>
-                </li>
-            </ul>
-        </div>
+            <div class="container">
+    
+                    <ul class="content-list">
+                        <li class="content-list__item">
+                            <h2 class="title-2">Frontend</h2>
+                            <p>JavaScript, TypeScript, ReactJS, Angular, Redux, HTML, CSS, NPM, BootStrap, MaterialUI, Yarn, TailwindCSS, StyledComponents</p>
+                        </li>
+                    </ul>
+            </div>
     </main>
 
     <footer class="footer">
