--- a/projects.html
+++ b/projects.html
@@ -23,19 +23,35 @@
 
     <main class="section">
         <div class="container">
-            <div class="project-details">
-                <h1 class="title-1">Video service</h1>
-                <img src="./img/projects/02-big.jpg" alt="" class="project-details__cover">
-
-                <div class="project-details__desc">
-                    <p>Skills: React, Node.js, MongoDB</p>
-                </div>
-
-                <a href="#!" class="btn-outline">
-                    <img src="./img/icons/gitHub-black.svg" alt="">
-                    GitHub repo
-                </a>
-            </div>
+            <h2 class="title-1">Projects</h2>
+            <ul class="projects">
+                <li class="project">
+                    <a href="./project-page.html">
+                        <img src="./img/projects/01.jpg" alt="Project img" class="project__img">
+                        <h3 class="project__title">Gaming streaming portal</h3>
+                    </a>
+                </li>
+                <li class="project">
+                    <img src="./img/projects/02.jpg" alt="Project img" class="project__img">
+                    <h3 class="project__title">Video service</h3>
+                </li>
+                <li class="project">
+                    <img src="./img/projects/03.jpg" alt="Project img" class="project__img">
+                    <h3 class="project__title">Video portal</h3>
+                </li>
+                <li class="project">
+                    <img src="./img/projects/04.jpg" alt="Project img" class="project__img">
+                    <h3 class="project__title">Datting app</h3>
+                </li>
+                <li class="project">
+                    <img src="./img/projects/05.jpg" alt="Project img" class="project__img">
+                    <h3 class="project__title">Landing</h3>
+                </li>
+                <li class="project">
+                    <img src="./img/projects/06.jpg" alt="Project img" class="project__img">
+                    <h3 class="project__title">Gaming community</h3>
+                </li>
+            </ul>
         </div>
     </main>
 
