--- a/contacts.html
+++ b/contacts.html
@@ -13,10 +13,9 @@
             <div class="nav-row">
                 <a href="./index.html" class="logo"><strong>Frontend </strong>Portfolio</a>
                 <ul class="nav-list">
-                    <li class="nav-list__item"> <a href="/index.html" class="nav-list__link">Projects</a></li>
-                    <li class="nav-list__item"> <a href="/skills.html" class="nav-list__link">Skills</a></li>
-                    <li class="nav-list__item"> <a href="/contacts.html" class="nav-list__link nav-list__link--active">Contacts</a></li>
-                </ul>
+                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link">Home</a></li>
+                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link">Projects</a></li>
+                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link nav-list__link--active">Contacts</a></li                </ul>
             </div>
             </div>
         </div>
