--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,12 @@
         <div class="container">
             <div class="nav-row">
                 <a href="./index.html" class="logo"><strong>Frontend </strong>Portfolio</a>
+
+                <buton class="dark-mode-btn dark-mode-btn">
+                    <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
+                    <img src="./img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon">
+                </buton>
+
                 <ul class="nav-list">
                     <li class="nav-list__item"><a href="./index.html" class="nav-list__link ">Home</a></li>
                     <li class="nav-list__item"><a href="./projects.html" class="nav-list__link nav-list__link--active">Projects</a></li>
@@ -78,5 +84,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/main.js"></script>
+
 </body>
 </html>
